# aiversion2

./: README.md  pyproject.toml
django_auth/django_auth/: settings.py
django_auth/users/: models.py
django_auth/users/migrations/: 0001_initial.py
