[tool.poetry]
name = "aiver2"
version = "0.1.0"
description = ""
authors = ["maks <krutbek2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.*"
djangorestframework = "^3.14.0"
djangorestframework-jwt = "^1.11.0"
python-dotenv = "^1.0.1"
psycopg = "^3.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
